# TimeVault

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  improve-icon.ps1
src-tauri/src/: main.rs  vault.rs
vault-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
vault-frontend/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx  tauri-wrapper.js
vault-frontend/src/components/: AddFileModal.jsx  Dashboard.jsx  DateTimePickerWrapper.jsx  FileExistsDialog.jsx  FileList.jsx  Header.jsx  PasswordModal.jsx  ToggleSwitch.jsx  VaultInitializer.jsx
vault-frontend/src/context/: ThemeContext.jsx
vault-frontend/src/styles/: datetimepicker.css
