[package]
name = "TimeVault"
version = "1.0.0" 
edition = "2021"
authors = ["Gerald Enyenwa <geraldenyenwa@live.com>"]
license = "MIT"
description = "TimeVault — A secure, non-custodial timed vault for keys and passphrases file storage."
repository = "https://github.com/e-gerald/TimeVault"
readme = "README.md"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
zeroize = "1.6"
tauri-plugin-dialog = "2.4.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
